fixed spacing for movie inner.

--- a/src/assets/sass/_showtime.scss
+++ b/src/assets/sass/_showtime.scss
@@ -1441,6 +1441,51 @@ border-bottom-right-radius: 10px;
 			padding: 15px 0;
 		}
 
+		&.tileview-movies-list--sty1{
+			> *{
+				&:nth-child(2){
+					display: none;
+				}
+				@media (max-width: 1023px){
+					&:nth-child(1){
+					    display: flex;
+					    align-items: center;
+					    min-height: 41px;
+					    width: 70%;
+
+					    .movielocation{
+						    @media (min-width: 768px){
+						    	padding-left: 0;
+						    }
+					    }
+					}
+					&:nth-child(3){
+						margin: 0 0 0 auto;
+					}
+				}
+				@media (max-width: 767px){
+					&:nth-child(1){
+						font-weight: bold;
+						padding-left: 10px;
+						.movielocation{
+							position: relative;
+							padding-left: 35px;
+							&:before{
+								content: "";
+								width: 15px;
+								height: 18px;
+								background: url(../img/icons/icon-location--black.svg) no-repeat 50%/13px auto;
+								position: absolute;
+								left: 6px;
+								top: -2px;
+							}
+						}
+					}
+				}
+			}
+
+		}
+
 		> *{
 			margin-right: 20px;
 			width: 100%;
@@ -1602,18 +1647,22 @@ border-radius: 5px;
 			width: 100%;
 		}
 	}
+	.showtimewrap ul{
+		margin-right: -20px;
+		padding-bottom: 20px;
+	}
 		.showtimewrap ul li{
 			float: left;
 			margin: 20px 20px 0 0;
 
 			&:last-child{
-				margin-right: 0;
+				// margin-right: 0;
 			}
 			&:nth-child(n+5){
-				margin-bottom: 20px;
+				// margin-bottom: 20px;
 			}
 
-			@media (min-width: 1471px){
+			/* @media (min-width: 1471px){
 				&:nth-child(4n){
 					margin-right: 0;
 					clear: right;
@@ -1621,20 +1670,20 @@ border-radius: 5px;
 				&:nth-child(5n){
 					clear: left;
 				}
-			}
+			} */
 			@media (max-width: 1470px) and (min-width: 1024px){
-				&:nth-child(3n){
+				/* &:nth-child(3n){
 					margin-right: 0;
 					clear: right;
 				}
 				&:nth-child(4n){
 					clear: left;
 					margin-bottom: 20px;
-				}
+				} */
 			}
 
 			@media (max-width: 1023px){
-				margin-top: 0;
+				// margin-top: 0;
 			}
 			@media (max-width: 767px){
 				margin-right: 10px;
